# android-captcha

./: .env  .gitignore  index.js  key.jks  package-lock.json  package.json  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/uz/csec/captcha/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/curl/: Makefile  Makefile.in
app/src/main/cpp/native/: main.cpp
app/src/main/java/uz/csec/captcha/: MainActivity.java  NativeLib.java
app/src/main/res/drawable/: circular_ripple.xml  ic_refresh.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/uz/csec/captcha/: ExampleUnitTest.java
controllers/: auth.js  dashboard.js  hashes.js  scan.js  settings.js
database/: index.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
models/: Admin.js  CleanHash.js  MaliciousUrl.js  ScanHistory.js  VirusHash.js
routers/: auth.js  hashes.js  scan.js  settings.js  views.js
utils/: virusHashLoader.js
views/: dashboard.hbs  hashes.hbs  login.hbs  scan.hbs  settings.hbs
views/layouts/: main.hbs
